# llm_dq_agent

./: .env  .env.example  .gitignore  README.md  create_structure.sh  pyproject.toml
chroma_db/: chroma.sqlite3  schema_cache_snowflake.json  schema_fingerprint_postgres.json  schema_fingerprint_snowflake.json
config/: settings.yaml
data/: call_center_prod.csv  fake_data_generator.py  fake_sales_prod.csv  income_band_prod.csv
docs/: AUTO_SCHEMA_DISCOVERY.md  CONFIGURATION.md  CONNECTORS.md  ENHANCED_AGENT_GUIDE.md  FEATURE_SUMMARY.md  MIGRATION_TO_SMART_PLANNER.md  MULTI_CONNECTOR_INDEXING.md  SAMPLE_DATA_COLLECTION.md  SCHEMA_DISCOVERY.md  code_reference_guide.md  indexing_flow_diagram.md  report_creation_process.md  schema_indexing_process.md  smart_dq_check_process.md  smart_dq_check_workflow.md
examples/: connector_usage.py  optimized_workflow_demo.py  schema_discovery_demo.py  test_agent_reporting.py
notebooks/: tryouts.ipynb
reports/: comprehensive_dq_report_20251120_135532.html  comprehensive_dq_report_20251120_135532.json  comprehensive_dq_report_20251120_135532.md  comprehensive_dq_report_20251125_125326.html  comprehensive_dq_report_20251125_125326.json  comprehensive_dq_report_20251125_125326.md  comprehensive_dq_report_prod_sales_call_center_20251129_171121.html  comprehensive_dq_report_prod_sales_call_center_20251129_171121.json  comprehensive_dq_report_prod_sales_call_center_20251129_171121.md  comprehensive_dq_report_prod_sales_call_center_20251202_091435.html  comprehensive_dq_report_prod_sales_call_center_20251202_091435.json  (+55 more)
(+36 files in other folders)
